--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charseart="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>barbearia alura</title>
+</head>
+<body>
+ <h1> sobre a Barbearia Alura</h1> 
+ <p></p>  
+</body>
+</html>
